--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@8base-react/forms": "^1.4.16",
     "@8base/auth": "^1.3.2",
     "@8base/boost": "^1.10.0",
+    "@8base/forms": "^0.37.2",
     "@emotion/styled": "^10.0.17",
     "@types/react-router-dom": "^5.1.5",
     "apollo-client": "^2.6.4",
@@ -15,6 +16,7 @@
     "graphql": "^14.5.7",
     "graphql-tag": "^2.9.2",
     "luxon": "^1.5.0",
+    "object-path": "^0.11.5",
     "ramda": "^0.26.1",
     "react": "^16.8.6",
     "react-apollo": "3.1.1",
@@ -34,7 +36,6 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "babel-eslint": "^10.0.3",
     "cross-env": "^6.0.0",
     "eslint": "^6.8.0",
     "react-scripts": "^3.4.3",
