--- a/server/package.json
+++ b/server/package.json
@@ -8,5 +8,8 @@
     "nodemailer": "^4.6.8",
     "path": "^0.12.7"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^14.14.34"
+  }
 }
